--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -103,6 +103,7 @@
   "products": {
     "product": {
       "add_to_cart": "Add to cart",
+      "checkout": "Quick Checkout",
       "description": "Description",
       "on_sale": "Sale",
       "product_variants": "Product variants",
