fix optimize feedback

--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -1403,6 +1403,9 @@
       "settings": {
         "show_cart_note": {
           "label": "Enable cart note"
+        },
+        "placeholder": {
+          "label": "Placeholder"
         }
       },
       "blocks": {
